# rules_python-issues-1873

./: BUILD.bazel  MODULE.bazel  requirements.txt
